Don't automatically paint clipped backgrounds into scrolling contents layer.

A composited scrolling contents layer currently does not correctly handle css
clip so we only paint into the layer if you explicitly request it with local
attachment.

BUG=645957
TEST=PaintLayerScrollableAreaTest.ShouldPaintBackgroundOntoScrollingContentsLayer
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2337503002
Cr-Commit-Position: refs/heads/master@{#418379}

Former-commit-id: fce29704ddbdbe670aee7a4f0a2a472930b0801b