third_party/WebKit/Source/core/paint/PaintLayerScrollableAreaTest.cpp
@@ -35,6 +35,7 @@ TEST_F(PaintLayerScrollableAreaTest, ShouldPaintBackgroundOntoScrollingContentsL
         "<div id='scroller14' class='scroller' style='background: white; border: 1px solid black; outline: 1px solid blue; outline-offset: -1px;'><div class='spacer'></div></div>"
         "<div id='scroller15' class='scroller' style='background: white; border: 1px solid black; outline: 1px solid blue; outline-offset: -2px;'><div class='spacer'></div></div>"
         "<div id='scroller16' class='scroller' style='background: white; border 1px solid black; border-radius: 2px;'><div class='spacer'></div></div>"
+        "<div id='scroller17' class='scroller' style='background: white; clip: rect(0px,10px,10px,0px);'><div class='spacer'></div></div>"
         );
 
     // #scroller1 cannot paint background into scrolling contents layer because it has a negative z-index child.
@@ -95,6 +96,10 @@ TEST_F(PaintLayerScrollableAreaTest, ShouldPaintBackgroundOntoScrollingContentsL
     // #scroller16 cannot paint background into scrolling contents layer because it has a
     // border radius.
     EXPECT_FALSE(shouldPaintBackgroundOntoScrollingContentsLayer("scroller16"));
+
+    // #scroller17 cannot paint background into scrolling contents layer because the scroller has a clip which
+    // would not be respected by the scrolling contents layer.
+    EXPECT_FALSE(shouldPaintBackgroundOntoScrollingContentsLayer("scroller17"));
 }
 
 TEST_F(PaintLayerScrollableAreaTest, OpaqueLayersPromoted)
